--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,21 +10,22 @@ readme = "README.md"
 keywords = ["tokenizer", "japanese", "morphological", "analyzer"]
 categories = ["text-processing"]
 license = "MIT"
+exclude = ["mecab-ipadic/**/*"]
 
 [dependencies]
-bincode = "1.1"
-byteorder = "1.2"
+bincode = "1.2.1"
+byteorder = "1.3.2"
 clap = "2.33.0"
-encoding = "0.2"
-serde = {version="1.0", features = ["derive"] }
-serde_json = "1.0.44"
-tantivy-fst = "0.1"
+encoding = "0.2.33"
+serde = {version="1.0.104", features = ["derive"] }
+serde_json = "1.0.45"
+tantivy-fst = "0.2.1"
 
 [dev-dependencies]
-criterion = "0.2"
+criterion = "0.3.1"
 
 [profile.release]
-debug = true
+debug = false
 lto = true
 
 [[bin]]
