--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "lindera"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
 edition = "2018"
-description = "A Japanese Morphological Analyzer written in Rust."
+description = "A Japanese Morphological Analysis Library written in Rust."
 homepage = "https://github.com/bayard-search/lindera"
 repository = "https://github.com/bayard-search/lindera"
 readme = "README.md"
@@ -16,7 +16,7 @@ exclude = ["docs", "dict", "mecab-ipadic/**/*"]
 bincode = "1.2.1"
 byteorder = "1.3.2"
 encoding = "0.2.33"
-lindera-ipadic = "0.1.2"
+lindera-ipadic = "0.1.3"
 serde = {version="1.0.104", features = ["derive"] }
 serde_json = "1.0.45"
 tantivy-fst = "0.2.1"
