--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
 edition = "2018"
 description = "A Japanese Morphological Analysis Library written in Rust."
@@ -10,7 +10,7 @@ readme = "README.md"
 keywords = ["tokenizer", "japanese", "morphological", "analyzer"]
 categories = ["text-processing"]
 license = "MIT"
-exclude = ["docs", "dict", "mecab-ipadic/**/*"]
+exclude = ["dict", "mecab-ipadic/**/*"]
 
 [dependencies]
 bincode = "1.2.1"
