--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 [dependencies]
 bincode = "1.2.1"
 byteorder = "1.3.2"
+encoding = "0.2.33"
 lindera-ipadic = "0.1.3"
 serde = {version="1.0.104", features = ["derive"] }
 tantivy-fst = "0.2.1"
