--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "lindera"
-version = "0.1.5"
+version = "0.1.6"
 authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
 edition = "2018"
 description = "A Japanese Morphological Analysis Library."
 homepage = "https://github.com/bayard-search/lindera"
 repository = "https://github.com/bayard-search/lindera"
 readme = "README.md"
-keywords = ["tokenizer", "japanese", "morphological", "analyzer"]
+keywords = ["japanese", "morphological", "analyzer", "tokenizer", "library"]
 categories = ["text-processing"]
 license = "MIT"
 
@@ -15,6 +15,8 @@ license = "MIT"
 bincode = "1.2.1"
 byteorder = "1.3.2"
 encoding = "0.2.33"
+lindera-core = "0.1.1"
+lindera-ipadic = "0.1.6"
 serde = {version="1.0.104", features = ["derive"] }
 tantivy-fst = "0.2.1"
 
