--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ lindera-core = "0.2.0"
 lindera-ipadic = "0.2.0"
 lindera-dictionary = "0.2.0"
 serde = {version="1.0.104", features = ["derive"] }
+serde_json = "1.0.45"
 tantivy-fst = "0.2.1"
 
 [dev-dependencies]
