--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera"
-version = "0.3.0"
+version = "0.3.1"
 authors = [
     "Paul Masurel <paul.masurel@gmail.com>",
     "Minoru Osuka <minoru.osuka@gmail.com>",
@@ -21,12 +21,12 @@ license = "MIT"
 bincode = "1.2.1"
 byteorder = "1.3.2"
 encoding = "0.2.33"
-lindera-core = "0.3.0"
-lindera-ipadic = "0.3.0"
-lindera-dictionary = "0.3.0"
+lindera-core = "0.3.1"
+lindera-dictionary = "0.3.1"
+lindera-fst = "0.1.0"
+lindera-ipadic = "0.3.1"
 serde = {version="1.0.104", features = ["derive"] }
 serde_json = "1.0.45"
-tantivy-fst = "0.2.1"
 
 [dev-dependencies]
 criterion = "0.3.1"
