--- a/lindera-core/Cargo.toml
+++ b/lindera-core/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "lindera-core"
-version = "0.4.1"
+version = "0.5.0"
 authors = [
     "Paul Masurel <paul.masurel@gmail.com>",
-    "Minoru Osuka <minoru.osuka@gmail.com>"
+    "Minoru Osuka <minoru.osuka@gmail.com>",
+    "Tomoko Uchida <tomoko.uchida.1111@gmail.com>"
     ]
 edition = "2018"
 description = "A morphological analysis core library."
