--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "lindera-dictionary"
-version = "0.4.1"
+version = "0.5.0"
 authors = [
     "Paul Masurel <paul.masurel@gmail.com>",
     "Minoru Osuka <minoru.osuka@gmail.com>",
-    "Jun Ohtani <johtani@gmail.com>"
+    "Jun Ohtani <johtani@gmail.com>",
+    "Tomoko Uchida <tomoko.uchida.1111@gmail.com>"
     ]
 edition = "2018"
 description = "A morphological dictionary loader."
@@ -20,4 +21,4 @@ license = "MIT"
 bincode = "1.2.1"
 byteorder = "1.3.4"
 
-lindera-core = { version = "0.4.1", path = "../lindera-core" }
+lindera-core = { version = "0.5.0", path = "../lindera-core" }
