--- a/lindera-ipadic-builder/Cargo.toml
+++ b/lindera-ipadic-builder/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "lindera-ipadic-builder"
-version = "0.4.1"
+version = "0.5.0"
 authors = [
     "Paul Masurel <paul.masurel@gmail.com>",
-    "Minoru Osuka <minoru.osuka@gmail.com>"
+    "Minoru Osuka <minoru.osuka@gmail.com>",
+    "Tomoko Uchida <tomoko.uchida.1111@gmail.com>"
     ]
 edition = "2018"
 description = "A Japanese morphological dictionary builder for IPADIC."
@@ -24,7 +25,7 @@ glob = "0.3.0"
 
 lindera-fst = "0.1.0"
 
-lindera-core = { version = "0.4.1", path = "../lindera-core" }
+lindera-core = { version = "0.5.0", path = "../lindera-core" }
 
 [[bin]]
 name = "lindera-ipadic"
