--- a/lindera-ipadic/Cargo.toml
+++ b/lindera-ipadic/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "lindera-ipadic"
-version = "0.4.1"
+version = "0.5.0"
 authors = [
     "Paul Masurel <paul.masurel@gmail.com>",
-    "Minoru Osuka <minoru.osuka@gmail.com>"
+    "Minoru Osuka <minoru.osuka@gmail.com>",
+    "Tomoko Uchida <tomoko.uchida.1111@gmail.com>"
     ]
 edition = "2018"
 description = "A Japanese morphological dictionary loader for IPADIC."
@@ -19,7 +20,7 @@ license = "MIT"
 bincode = "1.2.1"
 byteorder = "1.3.4"
 
-lindera-core = { version = "0.4.1", path = "../lindera-core" }
+lindera-core = { version = "0.5.0", path = "../lindera-core" }
 
 [build-dependencies]
 flate2 = "1.0.14"
@@ -27,4 +28,4 @@ reqwest = "0.10.4"
 tar = "0.4.27"
 tokio = { version = "0.2.21", features = ["full"] }
 
-lindera-ipadic-builder = { version = "0.4.1", path = "../lindera-ipadic-builder" }
+lindera-ipadic-builder = { version = "0.5.0", path = "../lindera-ipadic-builder" }
