--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "lindera"
-version = "0.4.1"
+version = "0.5.0"
 authors = [
     "Paul Masurel <paul.masurel@gmail.com>",
     "Minoru Osuka <minoru.osuka@gmail.com>",
     "Jun Ohtani <johtani@gmail.com>",
-    "ikawaha"
+    "ikawaha",
+    "Tomoko Uchida <tomoko.uchida.1111@gmail.com>"
     ]
 edition = "2018"
 description = "A morphological analysis library."
@@ -24,10 +25,10 @@ encoding = "0.2.33"
 serde = {version="1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
 
-lindera-core = { version = "0.4.1", path = "../lindera-core" }
-lindera-dictionary = { version = "0.4.1", path = "../lindera-dictionary" }
-lindera-ipadic = { version = "0.4.1", path = "../lindera-ipadic" }
-lindera-ipadic-builder = { version = "0.4.1", path = "../lindera-ipadic-builder" }
+lindera-core = { version = "0.5.0", path = "../lindera-core" }
+lindera-dictionary = { version = "0.5.0", path = "../lindera-dictionary" }
+lindera-ipadic = { version = "0.5.0", path = "../lindera-ipadic" }
+lindera-ipadic-builder = { version = "0.5.0", path = "../lindera-ipadic-builder" }
 
 [dev-dependencies]
 criterion = "0.3.1"
