--- a/lindera-ipadic-builder/Cargo.toml
+++ b/lindera-ipadic-builder/Cargo.toml
@@ -22,8 +22,7 @@ byteorder = "1.3.4"
 clap = "2.33.0"
 encoding = "0.2.33"
 glob = "0.3.0"
-
-lindera-fst = "0.1.0"
+yada = "0.3.2"
 
 lindera-core = { version = "0.5.1", path = "../lindera-core" }
 
