--- a/lindera-core/Cargo.toml
+++ b/lindera-core/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.5.1"
 authors = [
     "Paul Masurel <paul.masurel@gmail.com>",
     "Minoru Osuka <minoru.osuka@gmail.com>",
-    "Tomoko Uchida <tomoko.uchida.1111@gmail.com>"
+    "Tomoko Uchida <tomoko.uchida.1111@gmail.com>",
+    "Jun Ohtani <johtani@gmail.com>"
     ]
 edition = "2018"
 description = "A morphological analysis core library."
@@ -21,5 +22,4 @@ bincode = "1.2.1"
 byteorder = "1.3.4"
 encoding = "0.2.33"
 serde = {version="1.0.106", features = ["derive"] }
-
 yada = "0.3.2"
