--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-dictionary"
-version = "0.5.1"
+version = "0.6.0"
 authors = [
     "Paul Masurel <paul.masurel@gmail.com>",
     "Minoru Osuka <minoru.osuka@gmail.com>",
@@ -13,7 +13,7 @@ documentation = "https://docs.rs/lindera-dictionary"
 homepage = "https://github.com/lindera-morphology/lindera"
 repository = "https://github.com/lindera-morphology/lindera/lindera-dictionary"
 readme = "README.md"
-keywords = ["japanese", "morphological", "dictionary", "directory", "loader"]
+keywords = ["morphological", "dictionary", "directory", "loader"]
 categories = ["text-processing"]
 license = "MIT"
 
@@ -21,4 +21,4 @@ license = "MIT"
 bincode = "1.3"
 byteorder = "1.3"
 
-lindera-core = { version = "0.5.1", path = "../lindera-core" }
+lindera-core = { version = "0.6", path = "../lindera-core" }
