Move CLI to lindera-cli repository

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ members = [
     "lindera-ipadic-builder",
     "lindera-dictionary",
     "lindera-ipadic",
-    "lindera",
-    "lindera-cli",
+    "lindera"
 ]
 
 [profile.release]
