--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         toolchain: [stable]
-    needs: [upload-release]
+    needs: [create-release]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
