feat(user_dictionary): implement binary data reading and writing for user dictionary

--- a/lindera-ipadic-builder/Cargo.toml
+++ b/lindera-ipadic-builder/Cargo.toml
@@ -32,3 +32,7 @@ lindera-core = { version = "0.8.0", path = "../lindera-core" }
 [[bin]]
 name = "lindera-ipadic-builder"
 path = "src/main.rs"
+
+[[bin]]
+name = "lindera-userdic-builder"
+path = "src/bin/lindera-userdic-builder/main.rs"
