--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,7 @@ jobs:
 
   create-release:
     name: Create Release
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - id: create-release
@@ -119,7 +120,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         toolchain: [stable]
-    needs: [create-release]
+    needs: [upload-release]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
