--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -189,3 +189,36 @@ jobs:
             cargo publish --token ${{ secrets.CRATES_TOKEN }}
             popd
           fi
+
+  push-container:
+    name: Push Docker container
+    strategy:
+      matrix:
+        os: [ ubuntu-latest ]
+        toolchain: [stable]
+    needs: [publish-crates]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.toolchain }}
+          override: true
+      - run: |
+          LINDERA_VERSION=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[] | select(.name=="lindera") | .version')
+          echo "LINDERA_VERSION=${LINDERA_VERSION}" >> $GITHUB_ENV
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: docker/build-push-action@v2
+        with:
+          push: true
+          build-args: |
+            LINDERA_VERSION=${{ env.LINDERA_VERSION }}
+          tags: |
+            linderamorphology/lindera:latest
+            linderamorphology/lindera:${{ env.LINDERA_VERSION }}
