辞書の圧縮を行うことでバイナリを小さくする。(代わりに解答の実行時間が最初にかかる)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ members = [
     "lindera-dictionary",
     "lindera-ipadic",
     "lindera",
-    "lindera-cli"
+    "lindera-cli",
+    "lindera-compress",
 ]
 
 [profile.release]
