--- a/lindera-ipadic/Cargo.toml
+++ b/lindera-ipadic/Cargo.toml
@@ -20,8 +20,10 @@ license = "MIT"
 [dependencies]
 bincode = "1.3"
 byteorder = "1.4"
+once_cell = "1"
 
 lindera-core = { version = "0.8.1", path = "../lindera-core" }
+lindera-compress = { path = "../lindera-compress" }
 
 [build-dependencies]
 flate2 = "1.0"
