--- a/lindera-ipadic/Cargo.toml
+++ b/lindera-ipadic/Cargo.toml
@@ -17,7 +17,8 @@ keywords = ["japanese", "morphological", "dictionary", "loader", "ipadic"]
 categories = ["text-processing"]
 license = "MIT"
 
-
+[features]
+smallbinary = ["lindera-ipadic-builder/smallbinary"]
 
 [dependencies]
 bincode = "1.3"
