--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -19,7 +19,7 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-smallbinary = ["lindera-ipadic-builder/smallbinary"]
+smallbinary = ["lindera-ipadic-builder/smallbinary", "lindera-ipadic/smallbinary"]
 
 [dependencies]
 anyhow = "1.0"
