pure-rustで実装されたlzmaの実装を利用する

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ members = [
     "lindera",
     "lindera-cli",
     "lindera-compress",
+    "lindera-decompress",
 ]
+resolver = "2"
 
 [profile.release]
 lto = true
