--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -19,7 +19,7 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-smallbinary = ["lindera-ipadic-builder/smallbinary", "lindera-ipadic/smallbinary"]
+smallbinary = ["lindera-ipadic/smallbinary"]
 
 [dependencies]
 anyhow = "1.0"
@@ -33,6 +33,7 @@ lindera-core = { version = "0.8.1", path = "../lindera-core" }
 lindera-dictionary = { version = "0.8.1", path = "../lindera-dictionary" }
 lindera-ipadic = { version = "0.8.1", path = "../lindera-ipadic" }
 lindera-ipadic-builder = { version = "0.8.1", path = "../lindera-ipadic-builder" }
+
 
 [dev-dependencies]
 criterion = "0.3"
