--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -32,6 +32,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
         toolchain: [stable]
+        features: ["", "smallbinary"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
@@ -42,7 +43,7 @@ jobs:
           override: true
       - uses: actions-rs/cargo@v1
         with:
-          command: test
+          command: test --features ${{ matrix.features }}
 
   fmt:
     name: Format
