--- a/lindera-decompress/Cargo.toml
+++ b/lindera-decompress/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
-name = "lindera-compress"
+name = "lindera-decompress"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lzma-rs = "0.2"
+serde = { version = "1.0", features = ["derive"]}
+bincode = "1.3"
 anyhow = "1.0"
-rust-lzma = { version = "0.5"}
-lindera-decompress = { path = "../lindera-decompress" }
-
-[dev-dependencies]
-rand = "0.8.4"
