--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -43,7 +43,8 @@ jobs:
           override: true
       - uses: actions-rs/cargo@v1
         with:
-          command: test --features ${{ matrix.features }}
+          command: test
+          args: --features "${{ matrix.features }}"
 
   fmt:
     name: Format
