--- a/lindera-compress/Cargo.toml
+++ b/lindera-compress/Cargo.toml
@@ -7,8 +7,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-rust-lzma = { version = "0.5"}
 lindera-decompress = { path = "../lindera-decompress" }
+
+[target.'cfg(windows)'.dependencies]
+lzma-rs = "0.2"
+
+[target.'cfg(not(windows))'.dependencies]
+rust-lzma = { version = "0.5"}
 
 [dev-dependencies]
 rand = "0.8.4"
