--- a/lindera-ipadic-builder/Cargo.toml
+++ b/lindera-ipadic-builder/Cargo.toml
@@ -17,6 +17,9 @@ keywords = ["japanese", "morphological", "dictionary", "builder", "ipadic"]
 categories = ["text-processing"]
 license = "MIT"
 
+[features]
+compress = ["lindera-compress"]
+
 [dependencies]
 anyhow = "1.0"
 bincode = "1.3"
@@ -28,6 +31,8 @@ serde = "1.0"
 yada = "0.5"
 
 lindera-core = { version = "0.8.1", path = "../lindera-core" }
+lindera-decompress = { path = "../lindera-decompress" }
+lindera-compress = { path = "../lindera-compress", optional = true }
 
 [[bin]]
 name = "lindera-ipadic-builder"
