--- a/lindera-ipadic/Cargo.toml
+++ b/lindera-ipadic/Cargo.toml
@@ -17,11 +17,16 @@ keywords = ["japanese", "morphological", "dictionary", "loader", "ipadic"]
 categories = ["text-processing"]
 license = "MIT"
 
+[features]
+smallbinary = ["lindera-ipadic-builder/compress", "lindera-decompress"]
+
 [dependencies]
 bincode = "1.3"
 byteorder = "1.4"
+once_cell = "1"
 
 lindera-core = { version = "0.8.1", path = "../lindera-core" }
+lindera-decompress = { path = "../lindera-decompress", optional = true }
 
 [build-dependencies]
 flate2 = "1.0"
@@ -31,4 +36,4 @@ encoding = "0.2"
 tokio = { version = "1.9", features = ["full"] }
 
 lindera-core = { version = "0.8.1", path = "../lindera-core" }
-lindera-ipadic-builder = { version = "0.8.1", path = "../lindera-ipadic-builder" }
+lindera-ipadic-builder = { version = "0.8.1", path = "../lindera-ipadic-builder"}
