--- a/lindera-cli/Cargo.toml
+++ b/lindera-cli/Cargo.toml
@@ -22,7 +22,7 @@ smallbinary = ["lindera/smallbinary"]
 
 [dependencies]
 anyhow = "1.0"
-clap = "2.33"
+clap = { version = "3.1.0", features = ["derive"] }
 stringreader = "0.1"
 
 lindera = { version = "0.8.1", path = "../lindera" }
