--- a/lindera-ipadic-builder/Cargo.toml
+++ b/lindera-ipadic-builder/Cargo.toml
@@ -24,7 +24,7 @@ compress = ["lindera-compress"]
 anyhow = "1.0"
 bincode = "1.3"
 byteorder = "1.4"
-clap = "2.33"
+clap = { version = "3.1.0", features = ["derive"] }
 encoding = "0.2"
 glob = "0.3"
 serde = "1.0"
