--- a/lindera-compress/Cargo.toml
+++ b/lindera-compress/Cargo.toml
@@ -1,13 +1,20 @@
 [package]
 name = "lindera-compress"
-version = "0.1.0"
+version = "0.8.1"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A morphological analysis library."
+documentation = "https://docs.rs/lindera-compress"
+homepage = "https://github.com/lindera-morphology/lindera"
+repository = "https://github.com/lindera-morphology/lindera"
+readme = "README.md"
+keywords = ["morphological", "analysis", "library"]
+categories = ["text-processing"]
+license = "MIT"
 
 [dependencies]
 anyhow = "1.0"
-lindera-decompress = { path = "../lindera-decompress" }
+
+lindera-decompress = { version = "0.8.1", path = "../lindera-decompress" }
 
 [target.'cfg(windows)'.dependencies]
 lzma-rs = "0.2"
@@ -16,4 +23,4 @@ lzma-rs = "0.2"
 rust-lzma = { version = "0.5"}
 
 [dev-dependencies]
-rand = "0.8.4"
+rand = "0.8"
