--- a/lindera-ipadic-builder/Cargo.toml
+++ b/lindera-ipadic-builder/Cargo.toml
@@ -1,24 +1,15 @@
 [package]
 name = "lindera-ipadic-builder"
 version = "0.8.1"
-authors = [
-    "Paul Masurel <paul.masurel@gmail.com>",
-    "Minoru Osuka <minoru.osuka@gmail.com>",
-    "Tomoko Uchida <tomoko.uchida.1111@gmail.com>",
-    "Jun Ohtani <johtani@gmail.com>"
-    ]
 edition = "2018"
 description = "A Japanese morphological dictionary builder for IPADIC."
 documentation = "https://docs.rs/lindera-ipadic-builder"
 homepage = "https://github.com/lindera-morphology/lindera"
-repository = "https://github.com/lindera-morphology/linderalindera-ipadic-builder"
+repository = "https://github.com/lindera-morphology/lindera"
 readme = "README.md"
 keywords = ["japanese", "morphological", "dictionary", "builder", "ipadic"]
 categories = ["text-processing"]
 license = "MIT"
-
-[features]
-compress = ["lindera-compress"]
 
 [dependencies]
 anyhow = "1.0"
@@ -31,8 +22,8 @@ serde = "1.0"
 yada = "0.5"
 
 lindera-core = { version = "0.8.1", path = "../lindera-core" }
-lindera-decompress = { path = "../lindera-decompress" }
-lindera-compress = { path = "../lindera-compress", optional = true }
+lindera-decompress = { version = "0.8.1", path = "../lindera-decompress" }
+lindera-compress = { version = "0.8.1", path = "../lindera-compress" }
 
 [[bin]]
 name = "lindera-ipadic-builder"
