--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "lindera-dictionary"
-version = "0.8.1"
-edition = "2018"
-description = "A morphological dictionary loader."
+version = "0.9.0"
+edition = "2021"
+description = "A Japanese morphological dictionary."
 documentation = "https://docs.rs/lindera-dictionary"
 homepage = "https://github.com/lindera-morphology/lindera"
 repository = "https://github.com/lindera-morphology/lindera"
@@ -16,4 +16,4 @@ anyhow = "1.0"
 bincode = "1.3"
 byteorder = "1.4"
 
-lindera-core = { version = "0.8.1", path = "../lindera-core" }
+lindera-core = { version = "0.9.0", path = "../lindera-core" }
