--- a/lindera-core/Cargo.toml
+++ b/lindera-core/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "lindera-core"
-version = "0.8.1"
+version = "0.9.0"
 edition = "2018"
-description = "A morphological analysis core library."
+description = "A morphological analysis library."
 documentation = "https://docs.rs/lindera-core"
 homepage = "https://github.com/lindera-morphology/lindera"
 repository = "https://github.com/lindera-morphology/lindera"
