--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2.4.0
+      - name: Install packages for Linux
+        if : matrix.target == 'x86_64-unknown-linux-gnu'
+        run: |
+          sudo apt install -y liblzma-dev
       - uses: actions/cache@v2.1.7
         with:
           path: ~/.cargo/registry
