Revert upload-release job

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,52 +89,34 @@ jobs:
           name: create-release
           path: release_upload_url.txt
 
-  # upload-release:
-  #   strategy:
-  #     matrix:
-  #       target:
-  #         - x86_64-unknown-linux-gnu
-  #         - x86_64-pc-windows-msvc
-  #         - x86_64-apple-darwin
-  #   name: Upload Release
-  #   needs: [create-release]
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     upload_url: ${{ steps.upload-url.outputs.upload_url }}
-  #   steps:
-  #     - uses: actions/download-artifact@v2.1.0
-  #       with:
-  #         name: create-release
-  #     - id: upload-url
-  #       run: |
-  #         echo "::set-output name=url::$(cat create-release/release_upload_url.txt)"
-  #     - uses: actions/download-artifact@v2.1.0
-  #       with:
-  #         name: build-${{ matrix.target }}
-  #     - uses: actions/upload-release-asset@v1.0.2
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       with:
-  #         upload_url: ${{ steps.upload-url.outputs.url }}
-  #         asset_path: ./build-${{ matrix.target }}/lindera-${{ matrix.target }}.zip
-  #         asset_name: lindera-${{ matrix.target }}.zip
-  #         asset_content_type: application/zip
-
   upload-release:
     strategy:
       matrix:
         target:
-          - x86_64-unknown-linux-gnu
+          - x86_64-unknown-linux-musl
           - x86_64-pc-windows-msvc
           - x86_64-apple-darwin
     name: Upload Release
     needs: [create-release]
     runs-on: ubuntu-latest
     steps:
-      - uses: softprops/action-gh-release@v1
+      - uses: actions/download-artifact@v1
         with:
-          files: |
-            ./build-${{ matrix.target }}/lindera-${{ matrix.target }}.zip
+          name: create-release
+      - id: upload-url
+        run: |
+          echo "::set-output name=url::$(cat create-release/release_upload_url.txt)"
+      - uses: actions/download-artifact@v1
+        with:
+          name: build-${{ matrix.target }}
+      - uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.upload-url.outputs.url }}
+          asset_path: ./build-${{ matrix.target }}/lindera-${{ matrix.target }}.zip
+          asset_name: lindera-${{ matrix.target }}.zip
+          asset_content_type: application/zip
 
   publish-crates:
     name: Publish crate
